--- a/01-Portafolio/css/estilos.css
+++ b/01-Portafolio/css/estilos.css
@@ -246,6 +246,8 @@ header .contenedor-texto .texto .cargo{
 }
 .posts .contenedor-posts .post .foto{
     width: 100%;
+    height: 250px;
+    overflow: hidden;
 }
 .posts .contenedor-posts .post .foto img{
     width: 100%;
@@ -255,6 +257,8 @@ header .contenedor-texto .texto .cargo{
 .posts .contenedor-posts .post .descripcion{
     padding: 20px;
     background-color: #FFF; 
+    /* box-shadow: 0 3px 3px 0 #c9c9c9; */
+
 }
 .posts .contenedor-posts .post .descripcion .desc-body{
     border-bottom: solid 1px #c9c9c9;
@@ -429,4 +433,32 @@ footer .copyright{
     font-weight: 300;
     padding: 5px;
     border-top: solid 1px rgba(255, 255, 255, .20);
+}
+
+/* === === === MEDIA QUERIES === === === */
+/* === === === === ===== === === === === */ 
+
+@media screen and (max-width: 800px){
+    header .barra-navegacion{
+        flex-direction: column;
+        justify-content: center;
+    }
+    header .barra-navegacion .titulo{
+        padding: 10px 0;
+    }
+    header .barra-navegacion .menu a{
+        margin: 0 30px;
+    }
+    .habilidades .contenedor-habilidades .habilidad{
+        width: 30%;
+    }
+    .trabajos .contenedor-trabajos .trabajo{
+        width: 46%;
+    }
+    .posts .contenedor-posts .post{
+        width: 46%;
+    }
+    .posts .contenedor-posts .post .foto{
+        height: auto;
+    }
 }
