--- a/04-Portafolio02/estilos.css
+++ b/04-Portafolio02/estilos.css
@@ -43,13 +43,15 @@ body{
     background: #db4646;
 }
 .nueva-seccion{
-    padding: 80px 0;
+    padding: 100px 0;
     width: 100%;
 }
 .titulo-seccion{
     text-align: center;
     font-size: 3.5em;
-    margin: 40px 0;
+    /* margin: 40px 0; */
+    margin-bottom: 60px;
+    margin-top: 0;
     color: #222831;
 }
 
@@ -69,7 +71,7 @@ header .barra-navegacion{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 30px 0;
 }
 header .barra-navegacion h2{
     font-size: 2em;
@@ -77,11 +79,10 @@ header .barra-navegacion h2{
 }
 header .barra-navegacion ul{
     display: flex;
-
 }
 header .barra-navegacion ul li{
     list-style: none;
-    margin-right: 15px;
+    margin-right: 20px;
     padding: 10px 0;
     border-bottom: solid 2px transparent;
 }
@@ -91,6 +92,7 @@ header .barra-navegacion ul li:hover{
 header .barra-navegacion ul li a{
     text-decoration: none;
     color: #dddddd;
+    font-size: 1.2em;
 }
 header .contenedor-titular{
     color: #dddddd;
@@ -157,11 +159,12 @@ header .contenedor-titular .titular .ocupacion{
 }
 .servicios .container .contenedor-servicios .servicio{
     width: 32%;
-    margin-top: 40px;
+    margin-bottom: 40px;
     border-radius: 3px;
     padding: 30px;
     color: #dddddd;
-    background-image: linear-gradient(to right top, #2f6fb0, #3371af, #3872ad, #3c74ac, #4075aa);
+    /* background-image: linear-gradient(to right top, #2f6fb0, #3371af, #3872ad, #3c74ac, #4075aa); */
+    background: #30475E;
     overflow: hidden;
 }
 .servicios .container .contenedor-servicios .servicio h4{
@@ -189,5 +192,222 @@ header .contenedor-titular .titular .ocupacion{
 }
 .servicios .container .contenedor-servicios .servicio .icono i{
     font-size: 1.5em;
-    color: #4075AA;
+    /* color: #4075AA; */
+    color: #30475E;
+}
+/* ********** Trabajos *********** */
+.trabajos .contenedor-trabajos .trabajo{
+    width: 95%;
+}
+.owl-dots .owl-dot{
+    outline: none;
+}
+
+
+/* ********** Ventajas *********** */
+.ventajas{
+    background: #F9FAFC;
+
+}
+.ventajas .contenedor-ventajas{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.ventajas .contenedor-ventajas .ventaja{
+    width: 32%;
+    padding: 0 15px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.ventajas .contenedor-ventajas .ventaja .icono{
+    margin: 10px 0;
+    font-size: 3em;
+    color: #222831;
+}
+.ventajas .contenedor-ventajas .ventaja h4{
+    font-size: 1.2em;
+    color: #222831;
+    margin: 10px 0;
+}
+.ventajas .contenedor-ventajas .ventaja .desc{
+    color: #222831;
+    font-size: 1.1em;
+}
+
+/* ********** Blog *********** */
+.blog{
+    /* background: #F9FAFC; */
+}
+.blog .contenedor-articulos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    margin-bottom: 40px;
+}
+.blog .contenedor-articulos .articulo{
+    width: 30%;
+    box-shadow: 0 3px 3px 0 #c9c9c9;
+}
+.blog .contenedor-articulos .articulo .foto{
+    width: 100%;
+    overflow: hidden;
+}
+.blog .contenedor-articulos .articulo .foto img{
+    width: 100%;
+}
+.blog .contenedor-articulos .articulo .articulo-desc{
+    padding: 10px;
+}
+.blog .contenedor-articulos .articulo .articulo-desc h4{
+    margin-bottom: 10px;
+    font-size: 1.3em;
+    color: #222831;
+    font-weight: 500;
+}
+.blog .contenedor-articulos .articulo .articulo-desc p{
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 1em;
+    line-height: 1.5em;
+    margin-bottom: 10px;
+    height: 120px;
+}
+/* ********** Contacto *********** */
+.contacto{
+    background: #F9FAFC;
+}
+.contacto .titulo-seccion{
+    color: #222831;    
+}
+.contacto .formulario{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+.contacto .formulario input[type="text"],
+.contacto .formulario input[type="email"],
+.contacto .formulario textarea{
+    outline: none;
+    border: none;
+    padding: 15px 20px;
+    margin-bottom: 20px;
+    font-size: 1.3em;
+    font-family: 'Jost', sans-serif;
+    border-radius: 3px;
+}
+.contacto .formulario input[type="text"],
+.contacto .formulario input[type="email"]{
+    width: 49%;
+}
+.contacto .formulario textarea{
+    min-width: 100%;
+    width: 100%;
+    min-height: 200px;
+    height: 200px;
+    max-height: 300px;
+}
+.contacto .formulario .boton-primario{
+    margin: 0 auto;
+    padding: 15px 40px;
+    font-size: 1.2em;
+}
+
+/* ********** Icono Whatsapp  *********** */
+main .whatsapp{
+    position: fixed;
+    top: 85%;
+    right: 5%;
+    
+    text-align: center;
+}
+main .whatsapp a{
+    text-decoration: none;
+    color: #00B300;
+    font-weight: 600;
+}
+main .whatsapp a img{
+    width: 60px;
+}
+
+
+/* ********** Footer *********** */
+footer{
+    background: #222831;
+    padding-top: 100px;
+}
+
+footer .social-media{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 100px;
+}
+footer .social-media a{
+    width: 50px;
+    height: 50px;
+    background: #DDD;
+    padding: 20px;
+    margin: 0 10px;
+    border-radius: 100%;
+    text-decoration: none;
+    color: #222831;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .social-media .facebook:hover{
+    background: #3b5998;
+    color: #FFF;
+}
+footer .social-media .twitter:hover{
+    background: #1da1f2;
+    color: #FFF;
+}
+footer .social-media .instagram:hover{
+    background: #c13584;
+    color: #FFF;
+}
+footer .social-media .linkedin:hover{
+    background: #0077b5;
+    color: #FFF;
+}
+footer .social-media .github:hover{
+    background: #333;
+    color: #FFF;
+}
+
+footer .copyright{
+    font-weight: 300;
+    color: #DDD;
+    text-align: center;
+    margin: 0 auto;
+    padding: 15px 0;
+
+    border-top: solid 1px rgba(221, 221, 221, .3);
+}
+
+
+@media screen and (max-width: 950px){
+    header .barra-navegacion{
+        flex-direction: column;
+    }
+    header .barra-navegacion h2{
+        /* padding: 15px 0; */
+        font-weight: 900;
+        font-size: 2.5em;
+    }
+    .servicios .container .contenedor-servicios .servicio p{
+        height: auto;
+    }
+    .blog .contenedor-articulos .articulo .articulo-desc p{
+        height: 170px;
+    }
 }
